regress for java 8 compatibility
Signed-off-by: NeatGuyCoding <15627489+NeatGuyCoding@users.noreply.github.com>